--- a/javascript/index.html
+++ b/javascript/index.html
@@ -20,81 +20,76 @@
         import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.124/examples/jsm/controls/OrbitControls.js';
 
         // Read data exported from Python
-        var rowCoordinates = [
-            [0, 0, 0],   // Dummy coordinates for the first object
-            [2, 1, -3],  // Dummy coordinates for the second object
-            [-1, 2, 4],  // Dummy coordinates for the third object
+        let rowCoordinates = [
+            [0, 0, 0],
+            [2, 1, -3],
+            [-1, 2, -2],
+            [4, 0, -1],
+            [0, 3, 3],
+            [-3, -1, -1],
             // Add more coordinates as needed
         ];
 
         // Initialize Three.js scene
-        var scene = new THREE.Scene();
+        let scene = new THREE.Scene();
         scene.background = new THREE.Color(0xffffff); // Set background color to white
 
-        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        var renderer = new THREE.WebGLRenderer();
+        let camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        let renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.getElementById('container').appendChild(renderer.domElement);
 
         // Create grid helpers for X, Y, and Z axes
-        var gridSize = 10;
+        const gridSize = 9;
 
-        var gridXY = new THREE.GridHelper(gridSize, gridSize);
-        gridXY.rotation.x = Math.PI / 2;
-        gridXY.position.set(0, gridSize / 2, 0);
-        scene.add(gridXY);
+        let rightWall = new THREE.GridHelper(gridSize, gridSize);
+        rightWall.rotation.z = Math.PI / 2;
+        rightWall.position.set(gridSize / 2, 0, 0);
+        scene.add(rightWall);
 
-        var gridYZ = new THREE.GridHelper(gridSize, gridSize);
-        gridYZ.rotation.z = Math.PI / 2;
-        gridYZ.position.set(gridSize / 2, 0, 0);
-        scene.add(gridYZ);
+        let leftWall = new THREE.GridHelper(gridSize, gridSize);
+        leftWall.rotation.z = Math.PI / 2;
+        leftWall.position.set(-gridSize / 2, 0, 0);
+        scene.add(leftWall);
 
-        var gridXZ = new THREE.GridHelper(gridSize, gridSize);
-        gridXZ.position.set(0, 0, gridSize / 2);
-        scene.add(gridXZ);
+        let topWall = new THREE.GridHelper(gridSize, gridSize);
+        topWall.rotation.y = Math.PI / 2;
+        topWall.position.set(0, gridSize/2, 0, 0);
+        scene.add(topWall);
 
-        var gridXY2 = new THREE.GridHelper(gridSize, gridSize);
-        gridXY2.rotation.x = Math.PI / 2;
-        gridXY2.position.set(0, -gridSize / 2, 0);
-        scene.add(gridXY2);
-
-        var gridYZ2 = new THREE.GridHelper(gridSize, gridSize);
-        gridYZ2.rotation.z = Math.PI / 2;
-        gridYZ2.position.set(-gridSize / 2, 0, 0);
-        scene.add(gridYZ2);
-
-        var gridXZ2 = new THREE.GridHelper(gridSize, gridSize);
-        gridXZ2.position.set(0, 0, -gridSize / 2);
-        scene.add(gridXZ2);
+        let bottomWall = new THREE.GridHelper(gridSize, gridSize);
+        bottomWall.rotation.y = Math.PI / 2;
+        bottomWall.position.set(0, -gridSize/2, 0, 0);
+        scene.add(bottomWall);
 
         // Create a cube mesh with grid lines inside it
-        var cubeSize = 10;
-        var cubeGeometry = new THREE.BoxGeometry(cubeSize, cubeSize, cubeSize);
-        var cubeEdges = new THREE.EdgesGeometry(cubeGeometry);
-        var cubeLines = new THREE.LineSegments(cubeEdges, new THREE.LineBasicMaterial({ color: 0x000000 }));
+        let cubeSize = 10;
+        let cubeGeometry = new THREE.BoxGeometry(cubeSize, cubeSize, cubeSize);
+        let cubeEdges = new THREE.EdgesGeometry(cubeGeometry);
+        let cubeLines = new THREE.LineSegments(cubeEdges, new THREE.LineBasicMaterial({ color: 0x000000 }));
         scene.add(cubeLines);
 
         // Create 3D objects based on row coordinates
         rowCoordinates.forEach(function(coord) {
-            var geometry = new THREE.SphereGeometry(0.2, 32, 32); // Use spheres for points
-            var material = new THREE.MeshBasicMaterial({ color: 0xff0000 }); // Red color
-            var sphere = new THREE.Mesh(geometry, material);
+            let geometry = new THREE.SphereGeometry(0.2, 32, 32); // Use spheres for points
+            let material = new THREE.MeshBasicMaterial({ color: 0xff0000 }); // Red color
+            let sphere = new THREE.Mesh(geometry, material);
             sphere.position.set(coord[0], coord[1], coord[2]);
             scene.add(sphere);
         });
 
         // Add lighting
-        var ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
-        scene.add(ambientLight);
+        let ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+        //scene.add(ambientLight);
 
-        var directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
-        scene.add(directionalLight);
+        let directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
+        //scene.add(directionalLight);
 
         // Set camera position
-        camera.position.z = 20;
+        camera.position.z = 15;
 
         // Add controls for interactivity
-        var controls = new OrbitControls(camera, renderer.domElement);
+        let controls = new OrbitControls(camera, renderer.domElement);
 
         // Render function
         function animate() {
