--- a/javascript/index.html
+++ b/javascript/index.html
@@ -70,9 +70,9 @@
         scene.add(cubeLines);
 
         // Create 3D objects based on row coordinates
-        rowCoordinates.forEach(function(coord) {
+        rowCoordinates.forEach(function(coord, index) {
             let geometry = new THREE.SphereGeometry(0.2, 32, 32); // Use spheres for points
-            let material = new THREE.MeshBasicMaterial({ color: 0xff0000 }); // Red color
+            let material = new THREE.MeshBasicMaterial({ color: (index < 2) ? 0x0000ff : 0xff0000 }); // Blue for first 2
             let sphere = new THREE.Mesh(geometry, material);
             sphere.position.set(coord[0], coord[1], coord[2]);
             scene.add(sphere);
